Updating socks5 to use bosh ecosystem image
Signed-off-by: Long Nguyen <nguyenlo@vmware.com>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -3,8 +3,7 @@ resources:
   - name: docker-image
     type: registry-image
     source:
-      repository: golang
-      tag: 1.17
+      repository: bosh/bosh-ecosystem-concourse
       username: ((docker.username))
       password: ((docker.password))
   - name: socks5-proxy
