--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -3,9 +3,9 @@ resources:
   - name: docker-image
     type: registry-image
     source:
-      repository: bosh/bosh-ecosystem-concourse
-      username: ((docker.username))
-      password: ((docker.password))
+      repository: bosh/golang-release
+      username: ((dockerhub_username))
+      password: ((dockerhub_password))
   - name: socks5-proxy
     type: git
     source:
